# naya-repo-rane

./: Dockerfile  Dockerfile.envoy1330  Dockerfile.node12  Dockerfile.python312  Dockerfile.python312-alpine  Dockerfile.python312-slim-bookworm  Dockerfile.python395  Dockerfile.rockylinux8  Dockerfile.ubuntu2204  Makefile  bitbucket-pipelines.yml  docker-compose.yml  efdwefwef.txt  esdfwe.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  rockybitbuecktpipeline.yml  ubuntubitbucket-pipelines.yml
.github/workflows/: sync.yml
src/app/: main.py
src/node/: main.js
tests/: test_main.py
